--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -17,9 +17,8 @@
         <td><%= link.url %></td>
         <td><%= link_to 'Show', campaign_link_path(id: link.id) %></td>
         <td><%= link_to 'Edit', edit_campaign_link_path(id: link.id) %></td>
-        <td><%= link_to 'Destroy', campaign_link_path(id: link.id), :html => { :method => :delete }, data: { confirm: 'Are you sure?' } %></td>
         <td><%= form_tag campaign_link_path(id: link.id), method: "delete" do %>
-          <%=submit_tag "terminate"%></td>
+          <%=submit_tag "Delete"%></td>
         <%end%>
       </tr>
     <% end %>
@@ -33,10 +32,6 @@
 
 <td><%= link_to 'Back', campaign_path(@campaign) %></td>
 
-
-<td><%= link_to 'Take screenshots', take_screenshot_campaign_links_path(@campaign.id),method: :post %></td>
-
-<td><%= link_to 'Download', create_zip_campaign_links_path %></td>
 
 
 <h4>Import Links From CSV</h4>
