--- a/app/views/links/edit.html.erb
+++ b/app/views/links/edit.html.erb
@@ -6,5 +6,5 @@
   <%= submit_tag "Update" ,class: "btn btn-default"%>
 <% end %>
 
-<%= link_to 'Show', campaign_link_path(@link) %> |
-<%= link_to 'Back', campaign_links_path(@link) %>
+<%= link_to 'Show', campaign_link_path %> |
+<%= link_to 'Back', campaign_links_path %>
