--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -5,5 +5,5 @@
   <%= @link.url %>
 </p>
 
-<%= link_to 'Edit', edit_campaign_link_path(@link) %> |
-<%= link_to 'Back', campaign_links_path(@link) %>
+<%= link_to 'Edit', edit_campaign_link_path %> |
+<%= link_to 'Back', campaign_links_path %>
