--- a/app/views/campaigns/index.html.erb
+++ b/app/views/campaigns/index.html.erb
@@ -1,30 +1,42 @@
 <p id="notice"><%= notice %></p>
+<div class="whole">
+  <div class="middle">
+    <h1  class="text-center">Campaigns</h1>
+    <p  class="text-center">A simple App to take screenshots of Instagram Posts</p>
+  </div>
 
-<h1>Campaigns</h1>
+  <div class="ref">
+    <table class="table table-striped table-dark">
+      <thead>
+        <tr>
+          <th class="text-center">Name of the Campaign</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <tbody>
+        <% @campaigns.each do |campaign| %>
+          <tr>
+            <td><%= campaign.name %></td>
+            <td><%= link_to 'Show', campaign %></td>
+            <td><%= link_to 'Edit', edit_campaign_path(campaign) %></td>
+            <td><%= form_tag campaign, method: "delete" ,data: { confirm: 'Are you sure?' } do %>
+              <%=submit_tag "Delete"%></td>
+            <%end%>
+            
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-  <tbody>
-    <% @campaigns.each do |campaign| %>
-      <tr>
-        <td><%= campaign.name %></td>
-        <td><%= link_to 'Show', campaign %></td>
-        <td><%= link_to 'Edit', edit_campaign_path(campaign) %></td>
-        <td><%= form_tag campaign, method: "delete" ,data: { confirm: 'Are you sure?' } do %>
-          <%=submit_tag "Delete"%></td>
-        <%end%>
-        
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <br>
 
-<%= link_to 'New Campaign', new_campaign_path %>
+<div class="text-right" ><%= will_paginate @campaigns%></div>
+
+
+<div class="text-right">
+       <button class="btn-info btn"><%= link_to 'New Campaign', new_campaign_path %></button>
+</div>
