--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,56 +1,69 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Links</h1>
+<div>
+  <h1 class="text-center"><%=@links.first.campaign.name%></h1>
+  <h1 class="text-center">Links</h1>  
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Url</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-
-  <tbody>
-    <% @links.each do |link| %>
+<div >
+  <table class="table table-striped table-dark">
+    <thead>
       <tr>
-        <td><%= link.url %></td>
-        <td><%= link_to 'Show', campaign_link_path(id: link.id) %></td>
-        <td><%= link_to 'Edit', edit_campaign_link_path(id: link.id) %></td>
-        <td><%= form_tag campaign_link_path(id: link.id), method: "delete" do %>
-          <%=submit_tag "Delete"%></td>
-        <%end%>
+        <th class="text-center">Url</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @links.each do |link| %>
+        <tr>
+          <td><%= link.url %></td>
+          <td><%= link_to 'Show', campaign_link_path(id: link.id) %></td>
+          <td><%= link_to 'Edit', edit_campaign_link_path(id: link.id) %></td>
+          <td><%= form_tag campaign_link_path(id: link.id), method: "delete" do %>
+            <%=submit_tag "Delete"%></td>
+          <%end%>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
-
-<%= link_to 'New Link', new_campaign_link_path %>
-
-
-<td><%= link_to 'Back', campaign_path(@campaign) %></td>
+<br>
 
 
 
-<h4>Import Links From CSV</h4>
-  <%= form_tag import_campaign_links_path, multipart: true do%>
-    <%=file_field_tag :file%>
-    <%=submit_tag "Import CSV"%>
-  <% end %>
 
+
+<div class="text-right" >
+  <h4><%= will_paginate @links%></h4>
+  <h2><%= link_to 'New Link', new_campaign_link_path %></h2>  
+</div>
 
 <div>
-  <h4>Take Screenshot</h4>
+  <h4>Import Links From CSV</h4>
+    <%= form_tag import_campaign_links_path, multipart: true, class: "form-inline" do%>
+      <%=file_field_tag :file%>
+      <%=submit_tag "Import CSV"%>
+    <% end %>
+</div>
+
+<div>
+  <h4>Click Take Screenshot and wait till it completes</h4>
     <%= form_tag take_screenshot_campaign_links_path(@campaign.id) do%>
       <%=submit_tag "Take Screenshot"%>
     <% end %>
 </div>
+<br>
+<br>
 
 <div>
-  <td><%= link_to 'Download', create_zip_campaign_links_path %></td>  
+  <td><%= button_to 'Download', create_zip_campaign_links_path ,:class =>"btn",:method => :get%></td>  
 </div>
+
+
+
+<h2><%= link_to 'Back', campaign_path(@campaign) %></h2>
 
 
 
